@@ -35,6 +35,7 @@ POSSIBILITY OF SUCH DAMAGE.
 #include <mosquitto_broker.h>
 #include <memory_mosq.h>
 #include <send_mosq.h>
+#include <time_mosq.h>
 
 static int max_inflight = 20;
 static int max_queued = 100;
@@ -174,7 +175,7 @@ int mqtt3_db_message_delete(struct mosquitto *context, uint16_t mid, enum mosqui
 	while(tail){
 		msg_index++;
 		if(tail->state == ms_queued && msg_index <= max_inflight){
-			tail->timestamp_s = time(NULL);
+			tail->timestamp_s = mosquitto_time_s();
 			if(tail->direction == mosq_md_out){
 				switch(tail->qos){
 					case 0:
@@ -329,7 +330,7 @@ int mqtt3_db_message_insert(struct mosquitto_db *db, struct mosquitto *context, 
 	msg->store = stored;
 	msg->store->ref_count++;
 	msg->mid = mid;
-	msg->timestamp_s = time(NULL);
+	msg->timestamp_s = mosquitto_time_s();
 	msg->direction = dir;
 	msg->state = state;
 	msg->dup = false;
@@ -383,7 +384,7 @@ int mqtt3_db_message_update(struct mosquitto *context, uint16_t mid, enum mosqui
 	while(tail){
 		if(tail->mid == mid && tail->direction == dir){
 			tail->state = state;
-			tail->timestamp_s = time(NULL);
+			tail->timestamp_s = mosquitto_time_s();
 			return MOSQ_ERR_SUCCESS;
 		}
 		tail = tail->next;
@@ -597,11 +598,12 @@ int mqtt3_db_message_reconnect_reset(struct mosquitto *context)
 int mqtt3_db_message_timeout_check(struct mosquitto_db *db, unsigned int timeout)
 {
 	int i;
-	time_t threshold = time(NULL) - timeout;
+	time_t threshold;
 	enum mqtt3_msg_state new_state = ms_invalid;
 	struct mosquitto *context;
 	struct mosquitto_client_msg *msg;
 
+	threshold = mosquitto_time_s() - timeout;
 	
 	for(i=0; i<db->context_count; i++){
 		context = db->contexts[i];
@@ -627,7 +629,7 @@ int mqtt3_db_message_timeout_check(struct mosquitto_db *db, unsigned int timeout
 						break;
 				}
 				if(new_state != ms_invalid){
-					msg->timestamp_s = time(NULL);
+					msg->timestamp_s = mosquitto_time_s();
 					msg->state = new_state;
 					msg->dup = true;
 				}
@@ -655,7 +657,7 @@ int mqtt3_db_message_release(struct mosquitto_db *db, struct mosquitto *context,
 	while(tail){
 		msg_index++;
 		if(tail->state == ms_queued && msg_index <= max_inflight){
-			tail->timestamp_s = time(NULL);
+			tail->timestamp_s = mosquitto_time_s();
 			if(tail->direction == mosq_md_out){
 				switch(tail->qos){
 					case 0:
@@ -768,7 +770,7 @@ int mqtt3_db_message_write(struct mosquitto *context)
 				case ms_publish_qos1:
 					rc = _mosquitto_send_publish(context, mid, topic, payloadlen, payload, qos, retain, retries);
 					if(!rc){
-						tail->timestamp_s = time(NULL);
+						tail->timestamp_s = mosquitto_time_s();
 						tail->dup = 1; /* Any retry attempts are a duplicate. */
 						tail->state = ms_wait_for_puback;
 					}else{
@@ -781,7 +783,7 @@ int mqtt3_db_message_write(struct mosquitto *context)
 				case ms_publish_qos2:
 					rc = _mosquitto_send_publish(context, mid, topic, payloadlen, payload, qos, retain, retries);
 					if(!rc){
-						tail->timestamp_s = time(NULL);
+						tail->timestamp_s = mosquitto_time_s();
 						tail->dup = 1; /* Any retry attempts are a duplicate. */
 						tail->state = ms_wait_for_pubrec;
 					}else{
