@@ -46,6 +46,7 @@ POSSIBILITY OF SUCH DAMAGE.
 
 #include <mosquitto_broker.h>
 #include <memory_mosq.h>
+#include <time_mosq.h>
 #include <util_mosq.h>
 
 #ifndef POLLRDHUP
@@ -68,9 +69,9 @@ static void loop_handle_reads_writes(struct mosquitto_db *db, struct pollfd *pol
 
 int mosquitto_main_loop(struct mosquitto_db *db, int *listensock, int listensock_count, int listener_max)
 {
-	time_t start_time = time(NULL);
-	time_t last_backup = time(NULL);
-	time_t last_store_clean = time(NULL);
+	time_t start_time = mosquitto_time_s();
+	time_t last_backup = mosquitto_time_s();
+	time_t last_store_clean = mosquitto_time_s();
 	time_t now;
 	int fdcount;
 #ifndef WIN32
@@ -110,7 +111,7 @@ int mosquitto_main_loop(struct mosquitto_db *db, int *listensock, int listensock
 			pollfd_index++;
 		}
 
-		now = time(NULL);
+		now = mosquitto_time_s();
 		for(i=0; i<db->context_count; i++){
 			if(db->contexts[i]){
 				db->contexts[i]->pollfd_index = -1;
@@ -123,7 +124,10 @@ int mosquitto_main_loop(struct mosquitto_db *db, int *listensock, int listensock
 #endif
 
 					/* Local bridges never time out in this fashion. */
-					if(!(db->contexts[i]->keepalive_ms) || db->contexts[i]->bridge || now - db->contexts[i]->last_msg_in_ms < (time_t)(db->contexts[i]->keepalive_ms)*3/2){
+					if(!(db->contexts[i]->keepalive_ms) 
+							|| db->contexts[i]->bridge
+							|| mosquitto_time_ms() - db->contexts[i]->last_msg_in_ms < (time_t)(db->contexts[i]->keepalive_ms)*3/2){
+
 						if(mqtt3_db_message_write(db->contexts[i]) == MOSQ_ERR_SUCCESS){
 							pollfds[pollfd_index].fd = db->contexts[i]->sock;
 							pollfds[pollfd_index].events = POLLIN | POLLRDHUP;
@@ -148,13 +152,13 @@ int mosquitto_main_loop(struct mosquitto_db *db, int *listensock, int listensock
 					if(db->contexts[i]->bridge){
 						/* Want to try to restart the bridge connection */
 						if(!db->contexts[i]->bridge->restart_t_s){
-							db->contexts[i]->bridge->restart_t_s = time(NULL)+db->contexts[i]->bridge->restart_timeout_s;
+							db->contexts[i]->bridge->restart_t_s = mosquitto_time_s()+db->contexts[i]->bridge->restart_timeout_s;
 							db->contexts[i]->bridge->cur_address++;
 							if(db->contexts[i]->bridge->cur_address == db->contexts[i]->bridge->address_count){
 								db->contexts[i]->bridge->cur_address = 0;
 							}
 						}else{
-							if(db->contexts[i]->bridge->start_type == bst_automatic && time(NULL) > db->contexts[i]->bridge->restart_t_s){
+							if(db->contexts[i]->bridge->start_type == bst_automatic && mosquitto_time_s() > db->contexts[i]->bridge->restart_t_s){
 								db->contexts[i]->bridge->restart_t_s = 0;
 								if(mqtt3_bridge_connect(db, db->contexts[i]) == MOSQ_ERR_SUCCESS){
 									pollfds[pollfd_index].fd = db->contexts[i]->sock;
@@ -167,7 +171,7 @@ int mosquitto_main_loop(struct mosquitto_db *db, int *listensock, int listensock
 									pollfd_index++;
 								}else{
 									/* Retry later. */
-									db->contexts[i]->bridge->restart_t_s = time(NULL)+db->contexts[i]->bridge->restart_timeout_s;
+									db->contexts[i]->bridge->restart_t_s = mosquitto_time_s()+db->contexts[i]->bridge->restart_timeout_s;
 								}
 							}
 						}
@@ -182,7 +186,7 @@ int mosquitto_main_loop(struct mosquitto_db *db, int *listensock, int listensock
 							 * persistent_client_expiration seconds ago. If so,
 							 * expire it and clean up.
 							 */
-							if(time(NULL) > db->contexts[i]->disconnect_t_s+db->config->persistent_client_expiration_s){
+							if(mosquitto_time_s() > db->contexts[i]->disconnect_t_s+db->config->persistent_client_expiration_s){
 								_mosquitto_log_printf(NULL, MOSQ_LOG_NOTICE, "Expiring persistent client %s due to timeout.", db->contexts[i]->id);
 #ifdef WITH_SYS_TREE
 								g_clients_expired++;
@@ -230,14 +234,14 @@ int mosquitto_main_loop(struct mosquitto_db *db, int *listensock, int listensock
 			}else{
 				if(last_backup + db->config->autosave_interval_s < now){
 					mqtt3_db_backup(db, false, false);
-					last_backup = time(NULL);
+					last_backup = mosquitto_time_s();
 				}
 			}
 		}
 #endif
 		if(!db->config->store_clean_interval_s || last_store_clean + db->config->store_clean_interval_s < now){
 			mqtt3_db_store_clean(db);
-			last_store_clean = time(NULL);
+			last_store_clean = mosquitto_time_s();
 		}
 #ifdef WITH_PERSISTENCE
 		if(flag_db_backup){
